<resources>
    <string name="app_name">Kpr Mentos</string>
    <string name="mainpagetxt1">Overall College Attendance</string>
    <string name="mainpagetxt2">Lead for this Week</string>
    <string name="mainpagetxt3">CSE Department</string>
    <string name="attendancetxt">Attendance</string>
    <string name="hallbooktxt">Event Hall Booking</string>
    <string name="placementtxt">Placement</string>
    <string name="resulttxt">Semester Result</string>
    <string name="workshoptxt">Workshop</string>
    <string name="seminartxt">Seminars</string>
    <string name="upcometxt">Up Coming Events</string>
    <string name="statisticstxt">Statistics</string>
    <string name="csedtxt">CSE</string>
    <string name="ecedtxt">ECE</string>
    <string name="mechdtxt">MECH</string>
    <string name="bmedtxt">BME</string>
    <string name="eeedtxt">EEE</string>
    <string name="civildtxt">CIVIL</string>
    <string name="mentorlogintxt">Mentor\'s Login</string>
    <string name="Usernametxt">Username:</string>
    <string name="usernamegettertxt">Enter the Username</string>
    <string name="paswordtxt">Password:</string>
    <string name="passwordgettertxt">Enter the Password</string>
    <string name="backtxt">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="studenttxt">Student\'s Details</string>
    <string name="nametxt">Name:</string>
    <string name="rollnotxt">Rollno:</string>
    <string name="mentornmtxt">Mentor\'s Name</string>
    <string name="Submittxt">Submit</string>
    <string name="mentornamegettxt">Student\'s Mentor Name</string>
    <string name="rollnogettertxt">Student\'s Rollno</string>
    <string name="namegettertxt">Student\'s Name</string>
    <string name="hallbookingtxt">Event Conduction Rate</string>
    <string name="hallavatxt">Halls Available</string>
    <string name="ventxt">Veena Hall</string>
    <string name="dhantxt">Dhanam Hall</string>
    <string name="ragtxt">Ragam Hall</string>
    <string name="pallltxt">Pallavi Hall</string>
    <string name="openairtxt">Open Air</string>
    <string name="kalaitxt">Kalaiarangam</string>
    <string name="eventdetailstxt">Event Details</string>
    <string name="eventtxt">Event Name:</string>
    <string name="evtnammetxt">Event name</string>
    <string name="starttimetxt">Start Time:</string>
    <string name="starttimeetxt">Start Time of Event</string>
    <string name="endtimetxt">End Time:</string>
    <string name="endtimegettertxt">End Time of Event</string>
    <string name="organisertxt">Organizer:</string>
    <string name="orgaconttxt">Organizer Contact:</string>
    <string name="evtorcontxt">Organizer Contact</string>
    <string name="regitbutttxt">Register Event</string>
    <string name="depttxt">Department</string>
    <string name="dash">____________________________________________</string>
</resources>
