<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".Loginfragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentorlogintxt"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Usernametxt"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:layout_marginStart="30dp"
                />

            <EditText
                android:id="@+id/usergetter"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/whitebutton"
                android:hint="@string/usernamegettertxt"
                android:textColor="#000000"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paswordtxt"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:layout_marginStart="30dp"
                />

            <EditText
                android:id="@+id/passgetter"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/whitebutton"
                android:hint="@string/passwordgettertxt"
                android:textColor="#000000"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "/>

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:text="Login"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:paddingStart="0dp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img5"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>